# ugc1

./: README.md  REQUIREMENTS.md  docker-compose.yaml  process.puml  sample.env
config/: nginx.conf
diagram/: services.puml
event_api/: Dockerfile
event_etl/: Dockerfile  docker-entrypoint.sh  entrypoint.py  pyproject.toml
event_etl/data/: clickhouse_tables.json
event_etl/src/: __init__.py  config.py  errors.py  helper.py  main.py  models.py  table_create.py
research/: README.md  utils.py
research/clickhouse/: clickhouse-research.ipynb  config.py  load_data.py  main.py
research/kafka/: docker-compose.yaml  pyproject.toml  sample.env
research/kafka/src/: read.py  send.py
research/spark/: Dockerfile  docker-compose.yaml  pyproject.toml
research/spark/data/results/: .part-00000.crc  part-00000
research/spark/notebooks/: spark.ipynb
research/vertica/: Makefile  config.py  docker-compose.yml  load_data.py  main.py  requirements.txt  vertica-research.ipynb
tests/: Makefile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
tests/clickhouse_config/: config.xml
tests/tests/: conftest.py  enums.py  settings.py
tests/tests/jwt_service/: jwt_service.py
tests/tests/src/: misc.py  test_api.py
ugc/: Dockerfile  requirements.txt
ugc/src/: main.py
ugc/src/api/v1/: enums.py  ugc.py
ugc/src/core/: config.py  exceptions.py  log_config.py
ugc/src/db/: kafka.py
ugc/src/schemas/: __init__.py  clicks.py  page_views.py  search_filter_uses.py  video_finish.py  video_resolution_changes.py
ugc/src/services/: jwt_service.py  ugc.py
(+1 files in other folders)
